Fix alignment of text in attachment tag
[#171971175]

--- a/src/components/common/tags/AttachmentTag.less
+++ b/src/components/common/tags/AttachmentTag.less
@@ -6,6 +6,7 @@
   border: none;
   height: 32px;
   font-weight: 500;
+  line-height: 32px;
   transition: all 300ms ease-in-out;
   padding: 0 8px;
 
